deployments/manifests/services/scraping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraping-deployment
  namespace: n1-user18081998
  labels:
    app: scraping
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scraping
  template:
    metadata:
      labels:
        app: scraping
    spec:
      containers:
      - name: scraping
        image: user18081971/scraping:deployments
        ports: 
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 900m
            memory: 1Gi
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: scraping-service
  namespace: n1-user18081998
  labels:
    app: scraping
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: scraping
  type: ClusterIP
