deployments/manifests/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
    erep-ingress
  labels:
    name: erep-ingress
  annotations:
    dev.okteto.com/generate-host: "true"
  
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/probes"
        backend:
          service:
            name: probing-service
            port: 
              number: 8080
      - pathType: Prefix
        path: "/search"
        backend:
          service:
            name: searching-service
            port: 
              number: 8080
      - pathType: Prefix
        path: "/solr"
        backend:
          service:
            name: sol
            port: 
              number: 8983
